[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outluna"
version = "0.1.0"
description = "投资辅助聊天机器人：策略寻股、智能分析、回测验证"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "OutLuna Team" },
]
keywords = ["stock", "investment", "astrbot", "trading", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
analysis = [
    "akshare>=1.15.0",
    "yfinance>=0.2.54",
    "pandas-ta>=0.3.14b",
    "ta-lib>=0.5.0",
]
llm = [
    "openai>=1.35.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
all = [
    "outluna[analysis,llm,dev]",
]

[project.scripts]
outluna = "outluna.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["outluna"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "akshare",
    "akshare.*",
    "yfinance",
    "yfinance.*",
    "astrbot",
    "astrbot.api",
    "astrbot.api.*",
    "astrbot.api.event",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
